panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__arrays__test_multidimensional_array_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/arrays/test_multidimensional_array_length.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_multidimensional_array_length.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition external stack-size=4616
      (main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int` (static main))
      (params
         (main.unnamed_parameter.0~3 `int` @0)
         (argv~4 `ptr<ptr<char>>` @8))
      (compound-statement
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (100 `unsigned long` @48)))
         (definition (xs~5 `array<array<int; 27>; 42>` @16) ∅)
         (expression
            (call `int` @4552
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @4560
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @4568
                  (deref `ptr<char>` @4568
                     (ptr-add `ptr<ptr<char>>` @4576
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @4584 (1 `int` @4592)))))
               (42 `unsigned long` @4584)))
         (expression
            (call `int` @4552
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @4560
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @4568
                  (deref `ptr<char>` @4568
                     (ptr-add `ptr<ptr<char>>` @4576
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @4584 (1 `int` @4592)))))
               (27 `unsigned long` @4584)))
         (definition (ys~6 `ptr<array<array<int; 27>; 42>>` @4552) ∅)
         (return
            (truncate `int` @4560
               (add `unsigned long` @4568
                  (42 `unsigned long` @4568)
                  (27 `unsigned long` @4576)))))))

----- stderr -----
