panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__arrays__test_single_dimensional_array.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/arrays/test_single_dimensional_array.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_single_dimensional_array.c"
   (function-definition external stack-size=232
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (xs~2 `array<int; 42>` @0) ∅)
         (expression
            (assign `int` @168
               (deref `int` @168
                  (ptr-add `ptr<int>` @176
                     (noop-type-conversion `ptr<int>` @176
                        (addressof `ptr<array<int; 42>>` @176
                           (xs~2 `array<int; 42>` @0)))
                     (sign-extend `long` @184 (0 `int` @192))))
               (1 `int` @184)))
         (expression
            (assign `int` @168
               (deref `int` @168
                  (ptr-add `ptr<int>` @176
                     (noop-type-conversion `ptr<int>` @176
                        (addressof `ptr<array<int; 42>>` @176
                           (xs~2 `array<int; 42>` @0)))
                     (sign-extend `long` @184 (1 `int` @192))))
               (2 `int` @184)))
         (expression
            (assign `int` @168
               (deref `int` @168
                  (ptr-add `ptr<int>` @176
                     (noop-type-conversion `ptr<int>` @176
                        (addressof `ptr<array<int; 42>>` @176
                           (xs~2 `array<int; 42>` @0)))
                     (sign-extend `long` @184 (41 `int` @192))))
               (3 `int` @184)))
         (return
            (add `int` @168
               (deref `int` @168
                  (ptr-add `ptr<int>` @176
                     (noop-type-conversion `ptr<int>` @176
                        (addressof `ptr<array<int; 42>>` @176
                           (xs~2 `array<int; 42>` @0)))
                     (sign-extend `long` @184 (1 `int` @192))))
               (deref `int` @184
                  (ptr-add `ptr<int>` @192
                     (noop-type-conversion `ptr<int>` @192
                        (addressof `ptr<array<int; 42>>` @192
                           (xs~2 `array<int; 42>` @0)))
                     (sign-extend `long` @200 (41 `int` @208)))))))))

----- stderr -----
