panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__arrays__test_single_dimensional_array_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/arrays/test_single_dimensional_array_length.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_single_dimensional_array_length.c"
   (function-definition external stack-size=360
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (xs~1 `array<long; 42>` @0) ∅)
         (return (truncate `int` @336 (42 `unsigned long` @344))))))

----- stderr -----
