panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__arrays__test_single_dimensional_array_size.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/arrays/test_single_dimensional_array_size.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_single_dimensional_array_size.c"
   (function-definition external stack-size=40
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (xs~2 `array<int; 5>` @0) ∅)
         (return (truncate `int` @20 (20 `unsigned long` @24))))))

----- stderr -----
